Remove unnecessary div and adjust layout

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <div style="font-family: 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; border: 1px solid #d0d7de; border-radius: 12px; background-color: #ffffff; overflow: hidden; box-shadow: 0 8px 24px rgba(0, 32, 80, 0.15); max-width: 100%;">
 
-  <div style="background: linear-gradient(135deg, #002050 0%, #003478 100%); padding: 24px 28px; border-bottom: 3px solid #1958A7; display: flex; align-items: center; justify-content: space-between;">
+  <div style="background: linear-gradient(135deg, #002050 0%, #003478 100%); padding: 24px 28px; border-bottom: 3px solid #1958A7; display: flex; align-items: center;">
     <div>
         <h3 style="margin: 0; font-size: 20px; font-weight: 800; letter-spacing: 0.5px; color: #ffffff !important; text-transform: uppercase;">
         Shift B Schedule
@@ -9,7 +9,6 @@
         New Jersey Plant • Assembly Zone 4
         </p>
     </div>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Ford_logo_flat.svg" alt="Ford Oval" width="80" style="display: block; filter: brightness(0) invert(1); opacity: 0.9;">
   </div>
 
 
